# showcase

Python/fastapi/shop_app/: .dockerignore  .gitignore  Dockerfile  pyproject.toml  start-pod.yaml
Python/fastapi/shop_app/mongo/: Dockerfile
Python/fastapi/shop_app/server/: app.py  database.py  models.py
Python/fastapi/shop_app/server/routes/: cart.py  item.py
Python/testing/test_project/scripts/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
Python/testing/test_project/shop/: admin.py  forms.py  models.py  urls.py  views.py
Python/testing/test_project/test_project/: settings.py  urls.py
Python/wiki/: todo.txt
Python/wiki/kb/: admin.py  forms.py  models.py  urls.py  views.py
Python/wiki/kb/migrations/: 0001_initial.py  0002_auto_20210129_1142.py  0003_auto_20210129_1144.py  0004_auto_20210129_1145.py  0005_auto_20210129_1147.py  0006_auto_20210129_1625.py  0007_auto_20210129_1858.py  0008_auto_20210129_1908.py  0009_auto_20210130_2040.py  0010_auto_20210203_1358.py  0011_auto_20210207_1424.py
Python/wiki/kb/services/: search.py
Python/wiki/kb/templatetags/: kb_tags.py
Python/wiki/templates/kb/: article_add.html  article_delete.html  article_detail.html  article_edit.html  base.html  comment_add.html  comment_delete.html  comment_edit.html  file_add.html  file_delete.html  rating_add.html  rating_delete.html  rating_edit.html  search_results.html  section_add.html  section_list.html  subsection_add.html  subsection_delete.html  subsection_edit.html  subsection_list.html  user_create.html
Python/wiki/wiki/: settings.py  urls.py
(+38 files in other folders)
