[tool.poetry]
name = "shop_app"
version = "0.1.0"
description = "Test shop app"
authors = ["Serge Romanchuk <theerror133@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
motor = "^2.3.1"
pydantic = {extras = ["email"], version = "^1.8.1"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
